[package]
name = "spl-token-dpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.18.9"
solana-program = "1.18.9"
solana-sdk = "1.18.9"
solana-transaction-status = "1.18.9"
spl-token = "4.0"
spl-memo = "4.0"
hex = "0.4.3"
mpl-token-metadata = "4.1.2"
spl-associated-token-account = "3.0.2"
clap = "4.5.4"
